--- a/css/l27registerform.css
+++ b/css/l27registerform.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Stick&display=swap');
 :root{
 	--wcc:#f4f4f4;
 	--gyc:#777;
@@ -7,6 +8,7 @@
 }
 *{
 	box-sizing: border-box;
+	font-family: "Stick";
 }
 
 body{
